# lib/api-spec/openapi.yaml
@@ -78,7 +78,7 @@ paths:
           required: false
           schema:
             type: string
-            enum: [book, movie, tv, restaurant]
+            enum: [book, movie, tv, restaurant, hotel]
       responses:
         "200":
           description: List of suggestions
@@ -249,7 +249,7 @@ components:
           type: string
         category:
           type: string
-          enum: [book, movie, tv, restaurant]
+          enum: [book, movie, tv, restaurant, hotel]
         title:
           type: string
         description:
@@ -270,7 +270,7 @@ components:
           type: integer
         category:
           type: string
-          enum: [book, movie, tv, restaurant]
+          enum: [book, movie, tv, restaurant, hotel]
         title:
           type: string
           minLength: 1
@@ -293,7 +293,7 @@ components:
           type: string
         category:
           type: string
-          enum: [book, movie, tv, restaurant]
+          enum: [book, movie, tv, restaurant, hotel]
         title:
           type: string
         description:
@@ -342,7 +342,7 @@ components:
 
     Summary:
       type: object
-      required: [total, books, movies, tv, restaurants]
+      required: [total, books, movies, tv, restaurants, hotels]
       properties:
         total:
           type: integer
@@ -353,6 +353,8 @@ components:
         tv:
           type: integer
         restaurants:
+          type: integer
+        hotels:
           type: integer
 
     ErrorResponse:
